#4 Add walls socket communication - Change walls placing method - Add save game button without an api endpoint / visibilty and move choices need to fixed

--- a/front/css/quoridor.css
+++ b/front/css/quoridor.css
@@ -85,4 +85,28 @@ body{
     background: url('http://localhost:8000/assets/fond.png') no-repeat center center fixed;
     /* 'no-repeat' évite de répéter l'image, 'center center' la centre, et 'fixed' la fixe en place */
     background-size: cover; /* Ajuste la taille de l'image pour couvrir la section entière */
+    position: relative;
+    background-color: #ec1616;
+}
+.save_game{
+    position:absolute;
+    top:50px;
+    bottom: 50px;
+    left: 50px;
+    background-color: black;
+    border-radius: 8px;
+    padding: 5px;
+}
+.save-button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
 }
